Replace all the Buttons with FluentButton

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/ModalContainer.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/ModalContainer.razor
@@ -13,7 +13,7 @@
           <div class="mt-5 sm:mt-6">
             @if (ActionContent is null)
             {
-              <Button Variant=Button.ButtonVariant.Default data-qa="ModalButton" @onclick=CloseModal>Close</Button>
+              <FluentButton Appearance=Appearance.Accent data-qa="ModalButton" OnClick=CloseModal>Close</FluentButton>
             }
             else
             {
@@ -25,3 +25,5 @@
     </div>
   </div>
 }
+
+
