--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Components/Counter.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Components/Counter.razor
@@ -5,5 +5,10 @@
 <div data-qa="@TestId" @attributes=Attributes >
   <p>Current count: @CounterState.Count</p>
 
-  <Button Variant=Button.ButtonVariant.Default @onclick=ButtonClick>Click me</Button>
+  <FluentButton Appearance=Appearance.Accent OnClick=ButtonClick>Click me</FluentButton>
 </div>
+
+@code
+{
+  protected async Task ButtonClick() => await Send(new CounterState.IncrementCounter.Action(Amount: 5));
+}
