--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TransitionPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TransitionPage.razor
@@ -2,7 +2,7 @@
 
 <SidebarPage>
   <MainContent>
-    <Button @onclick=OnClickHandler>Click Me</Button>
+    <FluentButton OnClick=OnClickHandler >Click Me</FluentButton>
     <Transition
       Show=IsOpen
       Enter="transition-opacity duration-75"
