--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/ToDo/Components/TodoItemFormContainer.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/ToDo/Components/TodoItemFormContainer.razor
@@ -16,6 +16,9 @@
         <TimeWarp.HeroIcons.Outline.ArrowLeftCircleIcon class="h-8 w-8"/>
       </SvgIcon>
     </Button>
+    <FluentButton OnClick=Back>
+      <TimeWarp.HeroIcons.Outline.ArrowLeftCircleIcon class="h-8 w-8"/>
+    </FluentButton>
   </TitleButtonContent>
   <MainContent>
     <TodoItemForm/>
