--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
@@ -14,16 +14,23 @@
 
     <hr class="mt-4" />
     <Text class="mt-4 block">Reset button will clear all state in the Store and return you to the home page</Text>
-    <Button id="@Id" data-qa="@TestId" @onclick=ResetButtonClick>Reset Store</Button>
+    <FluentButton Appearance=Appearance.Accent Id=@Id data-qa=@TestId OnClick=ResetButtonClick>Reset Store</FluentButton>
 
     <hr class="mt-4" />
     <Text class="mt-4 block">Click below to send a Change Route Request that should take back to home page.</Text>
-    <Button Variant=Button.ButtonVariant.Default data-qa="ChangeRoute" @onclick=ButtonClick>Change Route to Home</Button>
+    <FluentButton Appearance=Appearance.Accent data-qa="ChangeRoute" OnClick=ButtonClick>Change Route to Home</FluentButton>
 
     <hr class="mt-4" />
     <Text class="mt-4 block">Click below to send a IncrementCountAction via JsInterop.</Text>
-    <Button class="" data-qa="JsInterop" onclick="Spa.Counter.DispatchIncrementCountAction()">
-      Increment Count by 7 via JavaScript Interop
-    </Button>
+
+    <FluentButton Appearance=Appearance.Accent data-qa="JsInterop" OnClick=IncrementCountViaJsInterop >Increment Count by 7 via JavaScript Interop</FluentButton>
   </MainContent>
 </SidebarPage>
+
+@inject IJSRuntime JsRuntime
+@code {
+  private async Task IncrementCountViaJsInterop()
+  {
+    await JsRuntime.InvokeVoidAsync("Spa.Counter.DispatchIncrementCountAction");
+  }
+}
