--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.TypeScript/css/input.css
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.TypeScript/css/input.css
@@ -1,3 +1,5 @@
-﻿@tailwind base;
+﻿@import "../../Web.Spa/obj/css/Web.Spa.styles.css";
+
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
