--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Developer/Pages/AlertExamplePage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Developer/Pages/AlertExamplePage.razor
@@ -9,7 +9,7 @@
   <MainContent>
     <FluentStack Orientation=Orientation.Vertical>
 
-      <FluentLabel Typo="Typography.H1">Alert Types</FluentLabel>
+      <FluentLabel Typo=Typography.H3>Alert Types</FluentLabel>
 
       <SimpleAlert Type=SimpleAlert.AlertType.Success Title="Success">
         The operation was completed successfully.
@@ -27,31 +27,44 @@
         New updates will be applied during the next system maintenance window.
       </SimpleAlert>
 
-      <FluentLabel Typo="Typography.H1">Customized with tailwind classes</FluentLabel>
+      <FluentLabel Typo=Typography.H3>Customized with tailwind classes</FluentLabel>
 
-      <SimpleAlert class="mt-4 w-fit" Title="Alert">
-        This alert is styled with extra tailwind classes. "mt-4 w-fit" which will be applied to the root element.
-      </SimpleAlert>
-
-      <SimpleAlert class="simple-alert__title--uppercase simple-alert__content--italic" Title="Alert">
+      <SimpleAlert class="simple-alert__title--uppercase simple-alert__content--italic mt-4 w-fit" Title="Alert">
         This alert is styled with BEM based tailwind classes.
         "simple-alert__title--uppercase"
         "simple-alert__content--italic"
+        "mt-4 w-fit"
       </SimpleAlert>
 
-      <FluentLabel Typo="Typography.H1">Customized with consumer css</FluentLabel>
+      <FluentLabel Typo=Typography.H3>Customized with consumer css</FluentLabel>
 
       <div>
         <SimpleAlert Type=SimpleAlert.AlertType.Custom Title="Custom">
-          This alert is styled with scoped css. It requires a parent container to allow deep to work. Not sure why.
-          It changes the title to uppercase and the content to italic and sets the card background to a light blue.
+          This alert is styled with scoped css. It requires a parent container (div) to allow deep to work. Not sure why.
+          <pre><code>
+            ::deep .simple-alert--custom .simple-alert__card {
+              background-color: lightblue;
+            }
+
+            ::deep .simple-alert--custom .simple-alert__label {
+              color: darkgreen;
+            }
+
+            ::deep .simple-alert--custom .simple-alert__title {
+              text-transform: uppercase;
+            }
+
+            ::deep .simple-alert--custom .simple-alert__content {
+              font-style: italic;
+            }
+          </code></pre>
         </SimpleAlert>
       </div>
 
-      <FluentLabel Typo="Typography.H1">Customized with inline style css</FluentLabel>
+      <FluentLabel Typo=Typography.H3>Customized with inline style css</FluentLabel>
 
-      <SimpleAlert Title="Alert" Style="">
-        Customized with inline style.  To make the title uppercase and the content italic.
+      <SimpleAlert Title="Alert" TitleStyle="text-transform: uppercase;" ContentStyle="font-style: italic;">
+        Customized with inline style. To make the title uppercase and the content italic.
       </SimpleAlert>
 
     </FluentStack>
