Remove TimeWarpOptions.Validation csproj we use the Nuget now

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/wwwroot/css/site.css
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-/*Dummy file to satisfy build process*/
+/* Dummy file to satisfy build requirement */
 
 /* /Components/Elements/SimpleAlert.razor.rz.scp.css */
 
@@ -111,7 +111,7 @@
   font-style: italic;
 }
 
-/*! tailwindcss v3.2.7 | MIT License | https://tailwindcss.com*/
+/* ! tailwindcss v3.2.7 | MIT License | https://tailwindcss.com */
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
