--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Styles/input.css
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Styles/input.css
@@ -3,3 +3,42 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Custom base styles (if any) */
+@layer base {
+  /* Add any custom base styles here */
+}
+
+/* Custom component styles */
+@layer components {
+  #blazor-error-ui {
+    background: lightyellow;
+    bottom: 0;
+    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
+    display: none;
+    left: 0;
+    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    margin: 20px 0;
+  }
+
+  #blazor-error-ui .dismiss {
+    cursor: pointer;
+    position: absolute;
+    right: 0.75rem;
+    top: 0.5rem;
+  }
+
+  .placeholder {
+    width: 100%;
+    border: 4px dashed var(--neutral-foreground-rest);
+    border-radius: 0.5rem;
+  }
+}
+
+/* Custom utility styles */
+@layer utilities {
+
+}
