add explicit using

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/DarkNavBar.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/DarkNavBar.razor
@@ -1,5 +1,7 @@
 ﻿@namespace TimeWarp.Architecture.Features.Applications.Components.NavBars.Dark
 
+@using TimeWarp.Architecture.Features.Application.Components.NavBar.Components
+
 <nav class="bg-gray-800">
   <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
     <div class="relative flex items-center justify-between h-16">
