add @using TimeWarp.Architecture.Features.Sidebars to all the SidebarPage s

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/ForbiddenPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/ForbiddenPage.razor
@@ -1,4 +1,5 @@
 @namespace TimeWarp.Architecture.Pages
+@using TimeWarp.Architecture.Features.Sidebars
 @inherits BaseComponent
 
 <PageTitle>Page Not Found</PageTitle>
