--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TestPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TestPage.razor
@@ -1,5 +1,5 @@
 ﻿@namespace TimeWarp.Architecture.Pages
-
+@using TimeWarp.Architecture.Features.Sidebars
 <SidebarPage>
     <MainContent>
         <div class="relative grow overflow-hidden rounded-xl border border-dashed border-gray-400 opacity-75">
