--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Developer/Pages/UserClaimsPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Developer/Pages/UserClaimsPage.razor
@@ -1,5 +1,6 @@
 @page "/UserClaims"
 @using TimeWarp.Architecture.Features.Developer.Components
+@using TimeWarp.Architecture.Features.Sidebars
 
 <SidebarPage>
   <MainContent>
