Clean up of namespaces on old StackedPage.razor

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SiteFooter.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SiteFooter.razor
@@ -1,5 +1,4 @@
-﻿@namespace TimeWarp.Architecture.Components
-@inherits BaseComponent
+﻿@inherits BaseComponent
 
  <footer class="bg-white">
    @if (CustomContent is not null)
