--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/Stacked/StackedPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/Stacked/StackedPage.razor
@@ -1,4 +1,5 @@
 ﻿@namespace TimeWarp.Architecture.Components
+@using TimeWarp.Architecture.Components.Pages
 @inherits BaseComponent
 
 <div class="flex flex-col min-h-screen font-sans">
