Explict namespaces because of removal from Global

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/SideBar/SidebarPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/SideBar/SidebarPage.razor
@@ -1,4 +1,5 @@
 ﻿@namespace TimeWarp.Architecture.Features.Sidebars
+@using TimeWarp.Architecture.Components.Pages
 @inherits BaseComponent
 
 <div class="h-full">
