Better use of fluent with tailwind

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Components/App.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Components/App.razor
@@ -15,8 +15,7 @@
   <link href="css/site.css" rel="stylesheet"/>
 
   @* Add FluentUI *@
-  <link href="_content/Microsoft.FluentUI.AspNetCore.Components/css/reboot.css" rel="stylesheet" />
-  <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
+  <link href="css/fluent.css" rel="stylesheet" />
 
   @* Icons *@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
