--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/SiteArea/PagePane/PagePane.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/SiteArea/PagePane/PagePane.razor
@@ -1,12 +1,18 @@
 @inherits BaseComponent
 
 @code {
+  [CascadingParameter] public TimeWarpPage? TimeWarpPage { get; set; }
 
+  protected override void OnParametersSet()
+  {
+    base.OnParametersSet();
+    Guard.Against.Null(TimeWarpPage, nameof(TimeWarpPage));
+  }
 }
 
 <FluentStack Class="page-pain" Orientation="Orientation.Vertical" Style="height: 100%" @attributes=Attributes>
   <PagePane_Header class="page-pane__page-pane_header" />
-  <div class="page-pane__content placeholder" style="height: 100%">PagePane Content</div>
-  <FluentSpacer></FluentSpacer>
+  <div class="page-pane__content placeholder" style="height: 100%">@TimeWarpPage?.PagePane_PageContent</div>
+  <FluentSpacer />
   <PagePane_Footer class="page-pane__page-pane_footer" />
 </FluentStack>
