--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/SiteArea/PagePane/PagePane_Header.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/SiteArea/PagePane/PagePane_Header.razor
@@ -1,7 +1,13 @@
 @inherits BaseComponent
 
 @code {
+  [CascadingParameter] public TimeWarpPage? TimeWarpPage { get; set; }
 
+  protected override void OnParametersSet()
+  {
+    base.OnParametersSet();
+    Guard.Against.Null(TimeWarpPage, nameof(TimeWarpPage));
+  }
 }
 
-<div class="page-pane_header placeholder" @attributes=Attributes>Page_Header</div>
+<div class="page-pane_header placeholder" @attributes=Attributes>@TimeWarpPage?.PagePane_HeaderContent</div>
