--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
@@ -12,6 +12,7 @@
 @using Morris.Blazor.Validation
 @using System.Net.Http.Json
 @using TimeWarp.Architecture.Components
+@using TimeWarp.Architecture.Components.Composites.TimeWarpPage
 @using TimeWarp.Architecture.Features
 @using TimeWarp.Architecture.Features.Applications.Components.NavBars.Dark
 @using TimeWarp.Architecture.Features.Debugger.Components
