--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane_Header.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane_Header.razor
@@ -1,5 +1,7 @@
-@inherits BaseComponent
+@inherits TimeWarpPageSubComponentBase
 @code {
 
 }
-<div class="left-pane_header placeholder" @attributes=Attributes>LeftPane_Header</div>
+<div class="left-pane_header placeholder" @attributes=Attributes>
+  @TimeWarpPage?.LeftPane_HeaderContent
+</div>
