--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane.razor
@@ -3,7 +3,7 @@
 }
 @using TimeWarp.Architecture.Components.Composites.TimeWarpPage.RightPane
 @using TimeWarp.Architecture.Components.Composites.TimeWarpPage.RightPane.SiteArea
-@inherits BaseComponent
+@inherits TimeWarpPageSubComponentBase
 
 @code {
 
