--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/SiteArea/SiteArea.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/SiteArea/SiteArea.razor
@@ -1,7 +1,7 @@
 @{
   #pragma warning disable FluentMultiSplitter
 }
-@inherits BaseComponent
+@inherits TimeWarpPageSubComponentBase
 @using TimeWarp.Architecture.Components.Composites.TimeWarpPage.RightPane.SiteArea.AsidePane
 @using TimeWarp.Architecture.Components.Composites.TimeWarpPage.RightPane.SiteArea.PagePane
 
