--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Developer/Pages/AlertExamplePage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Developer/Pages/AlertExamplePage.razor
@@ -41,7 +41,7 @@
 
       <div>
         <SimpleAlert Type=SimpleAlert.AlertType.Custom Title="Custom">
-          This alert is styled with scoped css. It requires a parent container (div) to allow deep to work. Not sure why.
+          This alert is styled with isolated css. It requires a parent container (div) to allow deep to work. Not sure why.
           <pre><code>
             ::deep .simple-alert--custom .simple-alert__card {
               background-color: lightblue;
